--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,7 @@
 @import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-:root{
+:root {
     --light: #f0f2f5;
     --dark: #2c3643;
     --primary: #af92e1;
@@ -13,7 +13,7 @@
 
 * {
     color: var(--dark);
-    font-family: "Quicksand", "sans-serif";
+    font-family: 'Quicksand', 'sans-serif';
     font-weight: 500;
 }
 
@@ -28,4 +28,49 @@ div,
 main,
 section {
     display: flex;
+}
+
+/* BACKGROUNDS */
+.bgPrimary {
+    background-color: var(--primary);
+}
+.bgSecondary {
+    background-color: var(--secondary);
+}
+.bgSuccess {
+    background-color: var(--success);
+}
+.bgError {
+    background-color: var(--error);
+}
+.bgAlert {
+    background-color: var(--alert);
+}
+
+/* INPUTS */
+.inputLight input {
+    outline: none;
+    border-color: var(--dark);
+    border-width: 1px 1px 1px 0;
+    border-radius: 0 4px 4px 0;
+    height: 28px;
+    padding-left: 8px;
+}
+.inputLight input::placeholder {
+    opacity: 1;
+    font-weight: 300;
+}
+.inputLight label {
+    display: flex;
+    align-items: center;
+    border-color: var(--dark);
+    border-style: solid;
+    border-width: 1px 0 1px 1px;
+    border-radius: 4px 0 0 4px;
+    height: 30px;
+    padding: 0 8px;
+}
+.inputLight label i {
+    position: relative;
+    top: 2px;
 }
