Borde en botones

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -77,7 +77,7 @@ section {
 
 /* BUTTONS */
 .btn {
-    border: none;
+    border: 1px solid var(--dark);
     border-radius: 4px;
     height: 32px;
     cursor: pointer;
