--- a/client/src/app/components/sign-up/basic/basic.component.html
+++ b/client/src/app/components/sign-up/basic/basic.component.html
@@ -11,4 +11,8 @@
         <label class="bgPrimary"><i class="fi fi-rr-rotate-left"></i></label>
         <input type="password" placeholder="Confirmar..." />
     </div>
+    <div>
+        <button type="button" class="btn bgAlert"><i class="fi fi-rr-angle-left"></i></button>
+        <button type="submit" class="btn bgSuccess">Siguiente</button>
+    </div>
 </form>
