--- a/client/src/app/components/sign-up/username/username.component.html
+++ b/client/src/app/components/sign-up/username/username.component.html
@@ -3,4 +3,8 @@
         <label for="" class="bgPrimary"><i class="fi fi-rr-user-astronaut"></i></label>
         <input type="text" placeholder="Username...">
     </div>
+    <div>
+        <button type="button" class="btn bgAlert"><i class="fi fi-rr-angle-left"></i></button>
+        <button type="submit" class="btn bgSuccess">Siguiente</button>
+    </div>
 </form>
