--- a/client/src/app/components/sign-up/sign-up.component.html
+++ b/client/src/app/components/sign-up/sign-up.component.html
@@ -1,2 +1,8 @@
-<basic />
-<username-form />
+<main>
+    <section>
+        <logo [height]="64"/>
+        <h1>Sign Up</h1>
+        <basic />
+        <username-form />
+    </section>
+</main>
