Agregado de etiquetas

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -19,14 +19,19 @@
 
 body,
 p,
-span {
+span,
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
     padding: 0;
 }
 
 div,
 main,
-section {
+section,
+form {
     display: flex;
 }
 
