--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -88,7 +88,7 @@ form {
     cursor: pointer;
     padding: 0 8px;
 }
-.btn i{
+.btn i {
     position: relative;
     top: 1px;
 }
@@ -96,6 +96,13 @@ form {
     background-color: var(--dark);
     color: var(--light);
 }
-.btn:hover i{
+.btn:hover i {
     color: var(--light);
+}
+.btn:disabled {
+    background-color: var(--light);
+    cursor: not-allowed;
+}
+.btn:disabled:hover {
+    color: var(--dark);
 }
