--- a/client/src/app/components/sign-up/sign-up.component.html
+++ b/client/src/app/components/sign-up/sign-up.component.html
@@ -1,8 +1,8 @@
 <main>
     <section>
-        <logo [height]="64"/>
+        <logo [height]="64" />
         <h1>Sign Up</h1>
-        <basic [hidden]="!(numForm === 0)"/>
-        <username-form [hidden]="!(numForm === 1)"/>
+        <basic (nextForm)="nextForm()" [hidden]="!(numForm === 0)" />
+        <username-form (nextForm)="nextForm()" (previousForm)="previousForm()" [hidden]="!(numForm === 1)" />
     </section>
 </main>
