Cambio en nombre de funcion

--- a/client/src/app/components/sign-up/basic/basic.component.html
+++ b/client/src/app/components/sign-up/basic/basic.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="formSubmit()" [formGroup]="formGroup">
+<form (ngSubmit)="submitForm()" [formGroup]="formGroup">
     <div class="inputLight">
         <label class="bgPrimary"><i class="fi fi-rr-envelope"></i></label>
         <input formControlName="email" type="email" placeholder="Correo..." />
