--- a/client/src/app/components/sign-up/basic/basic.component.html
+++ b/client/src/app/components/sign-up/basic/basic.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="submitForm()" [formGroup]="formGroup">
     <div class="inputLight">
         <label class="bgPrimary"><i class="fi fi-rr-envelope"></i></label>
-        <input formControlName="email" type="email" placeholder="Correo..." />
+        <input [(ngModel)]="emailModel" formControlName="email" type="email" placeholder="Correo..." />
     </div>
     @if (getControl('email').dirty) {
         <notification msj="El correo es invalido" icon="ban" [hidden]="!getControlError('email','email')"/>
