--- a/client/src/app/components/general/notification/notification.component.css
+++ b/client/src/app/components/general/notification/notification.component.css
@@ -5,6 +5,7 @@ div {
     align-items: center;
 }
 div i {
+    top: 2px;
     font-size: 16px;
-    margin: 0 8px 0 4px;
+    margin: 0 6px 0 4px;
 }
